fix: spacing issue

--- a/src/assets/output.css
+++ b/src/assets/output.css
@@ -2389,6 +2389,10 @@ html {
   padding-top: 0.75rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
